# rust-react-example

./: README.md
backend/: Cargo.toml
backend/assets/: index.html  test.js  test1.html  test2.html  testjs.html
backend/src/: main.rs
frontend/: package.json
frontend/src/: App.js
