[package]
name = "rust-react"
version = "0.1.0"
authors = ["Craig Bishop <craig.bishop@vcatechnology.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gotham = "0.3.0"
gotham_derive = "0.3.0"
hyper = "0.12"
mime = "0.3"
serde = "1"
serde_derive = "1"
serde_json = "1"